--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>war</packaging>
 
     <properties>
-        <spring.version>5.0.9.RELEASE</spring.version>
+        <spring.version>5.0.12</spring.version>
     </properties>
 
     <dependencies>
